[package]
name = "hypocaust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
riscv-decode = { git = "https://github.com/fintelia/riscv-decode"}

[features]
embed_guest_kernel = []